--- a/theme/_layouts/documentation.html
+++ b/theme/_layouts/documentation.html
@@ -88,7 +88,7 @@
                 for the documentation repository with your suggestions for improvement, or tweet at the @reactjs account.
                 We love hearing from you!
               </p>
-              <p><a href="https://github.com/climaxjs/climaxjs.com/tree/master/{{ page.path }}">Edit this page</a></p>
+              <p><a href="https://github.com/climax/website/tree/master/{{ page.path }}">Edit this page</a></p>
             </div><!-- /.content -->
           </div><!-- /.col -->
         </div><!-- /.row -->
